--- a/bots/css/styles.css
+++ b/bots/css/styles.css
@@ -26,14 +26,6 @@ p {
     color: #8f8f8f;
 }
 
-.about {
-    text-align: center;
-}
-
-.about:hover {
-    color: #ff4c68;
-}
-
 .skill-row {
     width: 50%;
     margin: 100px auto 80px auto;
@@ -60,17 +52,17 @@ p {
 /* TITLE */
 
 #title {
-    background-color: #ff4c68;
+    background-color: #00C9B8;
 }
 
 #title-page {
-    background-color: #ff4c68;
+    background-color: #00C9B8;
     color: #fff;
     padding-bottom: 6rem;
 }
 
 #contact-us {
-    background-color: #ff4c68;
+    background-color: #00C9B8;
     color: #fff;
 }
 
@@ -124,7 +116,7 @@ p {
 }
 
 .location-h2 {
-    color: #ff4c68;
+    color: #00C9B8;
     padding-top: 2rem;
 }
 
@@ -136,7 +128,7 @@ p {
 }
 
 .address {
-    color: #ff4c68;
+    color: #00C9B8;
     font-size: 1.5rem;
     padding-top: 2rem;
     font-family: Montserrat;
@@ -144,7 +136,7 @@ p {
 }
 
 .address1 {
-    color: #ff4c68;
+    color: #00C9B8;
     font-size: 1rem;
     font-family: Montserrat;
     font-weight: bold;
@@ -197,9 +189,17 @@ p {
 
 #features {
     padding: 7% 15%;
+    padding-left: 1rem;
     background-color: #fff;
     position: relative;
     z-index: 1;
+}
+
+.box {
+    width: 10px;
+    height: 10px;
+    color: green;
+    background-color: green;
 }
 
 .feature-box {
@@ -213,7 +213,7 @@ p {
 }
 
 .icon:hover {
-    color: #ff4c68;
+    color: #00C9B8;
 }
 
 
@@ -231,10 +231,6 @@ p {
     margin: 25px;
 }
 
-.carousel-item {
-    padding: 7% 14%;
-}
-
 
 /* Press */
 
@@ -247,6 +243,13 @@ p {
 .press-img {
     width: 15%;
     margin: 20px 20px 50px;
+}
+
+.tagline {
+    text-align: center;
+    font-size: 1rem;
+    height: auto;
+    font-weight: bold;
 }
 
 
@@ -265,7 +268,7 @@ p {
 /* CTA */
 
 #cta {
-    background-color: #ff4c68;
+    background-color: #00C9B8;
     padding: 7% 15%;
     color: #fff;
     text-align: center;
@@ -293,13 +296,14 @@ p {
 
 .contact-cont1 {
     padding: 4% 15%;
-    color: #ff4c68;
+    color: #00C9B8;
 }
 
 .copy {
     text-align: center;
     color: #fff;
-    padding-top: 2rem;
+    padding-top: 1rem;
+    font-family: Helvetica;
 }
 
 
@@ -312,24 +316,22 @@ p {
     .title-img {
         position: static;
         transform: rotate(0);
-        margin-right: 50%;
+        margin-right: 60%;
         width: 450px;
+        right: 20px;
     }
 }
 
-
-/*timeline */
-
 * {
     box-sizing: border-box;
-    padding-bottom: 2rem;
+    padding-bottom: 5px;
 }
 
 
 /* Set a background color */
 
 body {
-    background-color: #ff4c68;
+    background-color: #00C9B8;
     font-family: Helvetica, sans-serif;
 }
 
@@ -360,6 +362,7 @@ body {
 /* Container around content */
 
 .container {
+    padding: 10px 40px;
     position: relative;
     background-color: inherit;
     width: 50%;
@@ -385,7 +388,7 @@ body {
 /* Place the container to the left */
 
 .left {
-    right: 305px;
+    left: -305px;
 }
 
 
@@ -393,38 +396,6 @@ body {
 
 .right {
     left: 305px;
-}
-
-
-/* Add arrows to the left container (pointing right) */
-
-.left::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    right: 30px;
-    border: medium solid white;
-    border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
-}
-
-
-/* Add arrows to the right container (pointing left) */
-
-.right::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    left: 30px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
 }
 
 
@@ -437,10 +408,6 @@ body {
 
 /* The actual content */
 
-#id {
-    background-color: #ff4c68;
-}
-
 .content {
     padding: 20px 30px;
     background-color: white;
@@ -449,25 +416,19 @@ body {
 }
 
 
-/* Media queries - Responsive timeline on screens less than 600px wide */
+/* Media queries - Responsive timeline on screens less than 1200px wide */
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1200px) {
     /* Place the timelime to the left */
     .timeline::after {
         left: 31px;
+        position: relative;
     }
     /* Full-width containers */
     .container {
         width: 100%;
         padding-left: 70px;
         padding-right: 25px;
-    }
-    /* Make sure that all arrows are pointing leftwards */
-    .container::before {
-        left: 60px;
-        border: medium solid white;
-        border-width: 10px 10px 10px 0;
-        border-color: transparent white transparent transparent;
     }
     /* Make sure all circles are at the same spot */
     .left::after,
@@ -476,6 +437,20 @@ body {
     }
     /* Make all right containers behave like the left ones */
     .right {
-        left: 0%;
+        left: 1%;
     }
+    .left {
+        left: 1%
+    }
+}
+
+.social {
+    color: white;
+    padding: 0% 1.5% 0% 2.5%;
+    font-size: 1.2rem;
+}
+
+#footer {
+    padding: 2% 15% 0%;
+    text-align: center;
 }
